# tksheet

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  DONATE.md  DONATIONS.md  LICENSE.txt  README.md  README.rst  RELEASE_NOTES.md  __init__.py  manifest.in  meta.yaml  pyproject.toml  setup.py
.github/workflows/: publish-conda.yml
docs/: CHANGELOG.md  DOCUMENTATION.html  DOCUMENTATION.md  LICENSE.txt  README.md
tests/: recipe_listbox.py  test_formatters.py  test_formatters_1.py  test_formatters_2.py  test_tksheet.py
tksheet/: README.rst  __init__.py  _converters.py  _formatters.py  _tksheet.py  _tksheet_column_headers.py  _tksheet_formatters.py  _tksheet_main_table.py  _tksheet_other_classes.py  _tksheet_row_index.py  _tksheet_top_left_rectangle.py  _tksheet_vars.py  colors.py  column_headers.py  constants.py  dropdown.py  find_window.py  formatters.py  functions.py  listbox.py  main_table.py  menus.py  other_classes.py  row_index.py  sheet.py  sheet_options.py  sorting.py  text_editor.py  themes.py  tksheet_.py  tksheet_.pyd  tksheet_types.py  tooltip.py  top_left_rectangle.py  types.py  vars.py
tksheet-2.0/: LICENSE.txt
