[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tksheet"
description = "Tkinter table / sheet and treeview widget"
readme = "README.md"
version = "7.4.14"
authors = [{ name = "ragardner", email = "github@ragardner.simplelogin.com" }]
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["tkinter", "table", "widget", "tree", "treeview", "sheet", "grid", "tk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/ragardner/tksheet"
Documentation = "https://github.com/ragardner/tksheet/wiki/Version-7"
Changelog = "https://github.com/ragardner/tksheet/blob/master/docs/CHANGELOG.md"
Issues = "https://github.com/ragardner/tksheet/issues"
Funding = "https://github.com/ragardner"

[tool.ruff]
line-length = 120
extend-select = ["I", "F", "C4", "E", "B", "SIM"]
fix = true
ignore = ["SIM401"]
